# ffmpeg-fandisp

./: Cargo.toml
ffmpeg/: Cargo.toml
ffmpeg-sys/: .travis.yml  Cargo.toml  build.rs
ffmpeg-sys/src/avcodec/: codec.rs
ffmpeg-sys/src/avresample/: mod.rs
ffmpeg-sys/src/avutil/: pixfmt.rs
ffmpeg-sys/tests/data/: ffmpeg-structs.c
ffmpeg/src/: lib.rs
ffmpeg/src/codec/: context.rs
ffmpeg/src/util/format/: pixel.rs
src/: main.rs
src/ffmpeg-sys/tests/: lib.rs
